--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "hbs": "~4.0.1",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
+  },
+  "engines": {
+    "node": "6.9.1",
+    "npm": "5.4.2"
   }
 }
