--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "fixer": "1.2.4",
     "hbs": "~4.0.1",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
+
   },
   "engines": {
     "node": "6.9.1",
